--- a/static-html/dev-html/services/scripts.html
+++ b/static-html/dev-html/services/scripts.html
@@ -1,3 +1,5 @@
 <div id="svgPlaceholder"></div>
+<script src="https://use.typekit.net/gpb0qdz.js"></script>
+<script>try{Typekit.load({ async: true });}catch(e){}</script>
 <script src="js/vendor.min.js"></script>
 <script src="js/app.min.js"></script>
