28220 style mobile nav toggler and header for mobile bp

--- a/static-html/index.html
+++ b/static-html/index.html
@@ -47,66 +47,64 @@
             </div>
         </div>
         <div class="small-3 medium-9 column u-text--right">
-            <div class="show-for-medium">
-                <div class="siteHeader-social">
-                    <ul class="socialList u-list--plain u-list--inline">
-                        <li>
-                            <a href="#" target="_blank" title="Follow us on Twitter">
-                                <svg class='svgIcon'>
-                                    <use xlink:href='#twitter'/>
-                                </svg>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" target="_blank" title="Follow us on Facebook">
-                                <svg class='svgIcon'>
-                                    <use xlink:href='#facebook'/>
-                                </svg>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" target="_blank" title="Follow us on Youtube">
-                                <svg class='svgIcon'>
-                                    <use xlink:href='#youtube'/>
-                                </svg>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <nav class="siteHeader-topNav">
-                    <ul class="siteNavigation u-list--plain u-list--inline">
-                        <li>
-                            <a href="#">Contacts</a>
-                        </li>
-                    </ul>
-                </nav>
+            <div class="show-for-medium siteHeader-social">
+                <ul class="socialList u-list--plain u-list--inline">
+                    <li>
+                        <a href="#" target="_blank" title="Follow us on Twitter">
+                            <svg class='svgIcon'>
+                                <use xlink:href='#twitter'/>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" target="_blank" title="Follow us on Facebook">
+                            <svg class='svgIcon'>
+                                <use xlink:href='#facebook'/>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" target="_blank" title="Follow us on Youtube">
+                            <svg class='svgIcon'>
+                                <use xlink:href='#youtube'/>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
             </div>
-            <div>
-                <nav class="show-for-large">
-                    <ul class="siteNavigation siteNavigation--header u-list--plain u-list--inline u-text--left">
-                        <li><a href="#">About</a></li>
-                        <li class="has-subNav">
-                            <a href="#">For the arts community</a>
-                            <ul class="u-list--plain">
-                                <li><a href="#">Oure Grants</a></li>
-                                <li><a href="#">Grant Recipients</a></li>
-                                <li><a href="#">Learning Center</a></li>
-                                <li><a href="#">Events for Artists</a></li>
-                            </ul>
-                        </li>
-                        <li class="has-subNav">
-                            <a href="#">Explore the arts</a>
-                            <ul class="u-list--plain">
-                                <li><a href="#">Events</a></li>
-                                <li><a href="#">Venue Directory</a></li>
-                                <li><a href="#">Local Artists Directory</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">Our journal</a></li>
-                    </ul>
-                </nav>
-                <button type="button" class="button hide-for-large" data-toggle="offCanvas">Open Menu</button>
-            </div>
+            <nav class="show-for-medium siteHeader-topNav">
+                <ul class="siteNavigation u-list--plain u-list--inline">
+                    <li>
+                        <a href="#">Contacts</a>
+                    </li>
+                </ul>
+            </nav>
+            <nav class="show-for-large">
+                <ul class="siteNavigation siteNavigation--header u-list--plain u-list--inline u-text--left">
+                    <li><a href="#">About</a></li>
+                    <li class="has-subNav">
+                        <a href="#">For the arts community</a>
+                        <ul class="u-list--plain">
+                            <li><a href="#">Oure Grants</a></li>
+                            <li><a href="#">Grant Recipients</a></li>
+                            <li><a href="#">Learning Center</a></li>
+                            <li><a href="#">Events for Artists</a></li>
+                        </ul>
+                    </li>
+                    <li class="has-subNav">
+                        <a href="#">Explore the arts</a>
+                        <ul class="u-list--plain">
+                            <li><a href="#">Events</a></li>
+                            <li><a href="#">Venue Directory</a></li>
+                            <li><a href="#">Local Artists Directory</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Our journal</a></li>
+                </ul>
+            </nav>
+            <button type="button" class="hide-for-large mobileNavToggle js-mobileNavToggle" data-toggle="offCanvas" data-open="CLOSE" data-close="MENU">
+                <span class="mobileNavToggle-hamburger"><span></span></span>
+            </button>
         </div>
     </section>
 </header>
