--- a/static-html/dev-html/pages/index.html
+++ b/static-html/dev-html/pages/index.html
@@ -4,7 +4,7 @@
 <body>
 <div class="off-canvas-wrapper">
     <div class="off-canvas-wrapper-inner" data-off-canvas-wrapper>
-        <div class="off-canvas position-right" id="offCanvas" data-off-canvas data-position="right">
+        <div class="off-canvas position-right" id="offCanvas" data-off-canvas data-position="right" data-auto-focus="false">
             <!-- build:section partials.offCanvas --><!-- /build -->
         </div>
         <div class="off-canvas-content" data-off-canvas-content>
