28220 add subNav to all desktop items

--- a/static-html/index.html
+++ b/static-html/index.html
@@ -160,7 +160,13 @@
             </nav>
             <nav class="show-for-large">
                 <ul class="siteNavigation siteNavigation--header u-list--plain u-list--inline u-text--left">
-                    <li><a href="#">About</a></li>
+                    <li class="has-subNav">
+                        <a href="#">About</a>
+                        <ul class="u-list--plain">
+                            <li><a href="#">Our Team</a></li>
+                            <li><a href="#">Partnership</a></li>
+                        </ul>
+                    </li>
                     <li class="has-subNav">
                         <a href="#">For the arts community</a>
                         <ul class="u-list--plain">
@@ -178,7 +184,17 @@
                             <li><a href="#">Local Artists Directory</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Our journal</a></li>
+                    <li class="has-subNav">
+                        <a href="#">Our journal</a>
+                        <ul class="u-list--plain">
+                            <li><a href="#">Learning Center</a></li>
+                            <li><a href="#">Visual Arts</a></li>
+                            <li><a href="#">Music</a></li>
+                            <li><a href="#">Performing Arts</a></li>
+                            <li><a href="#">Literature</a></li>
+                            <li><a href="#">News</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </nav>
             <button type="button" class="hide-for-large mobileNavToggle js-mobileNavToggle" data-toggle="offCanvas" data-open="CLOSE" data-close="MENU">
