28281 add footer partial

--- a/static-html/dev-html/pages/index.html
+++ b/static-html/dev-html/pages/index.html
@@ -9,6 +9,7 @@
         </div>
         <div class="off-canvas-content" data-off-canvas-content>
             <!-- build:section partials.header --><!-- /build -->
+            <!-- build:section partials.footer --><!-- /build -->
         </div>
     </div>
 </div>
