--- a/static-html/dev-html/partials-dev/footer.html
+++ b/static-html/dev-html/partials-dev/footer.html
@@ -9,9 +9,9 @@
                 </a>
             </div>
         </div>
-        <div class="medium-9 large-6 column">
-            <nav class="show-for-large siteNavigation siteNavigation--footer">
-                <ul class="u-list--plain u-list--inline">
+        <div class="medium-10 large-7 column">
+            <nav class="">
+                <ul class="siteNavigation siteNavigation--footer u-list--plain u-list--inline">
                     <li>
                         <a href="#">For the arts community</a>
                         <ul class="u-list--plain">
@@ -33,7 +33,7 @@
                 </ul>
             </nav>
         </div>
-        <div class="medium-3 column">
+        <div class="medium-2 column">
             <!-- build:section blocks.socialList --><!-- /build -->
         </div>
     </div>
