28281 style top row in footer

--- a/static-html/dev-html/blocks/social-list.html
+++ b/static-html/dev-html/blocks/social-list.html
@@ -1,4 +1,4 @@
-<ul class="socialList u-list--plain u-list--inline test5">
+<ul class="socialList u-list--plain u-list--inline">
     <li>
         <a href="#" target="_blank" title="Follow us on Twitter">
             <svg class='svgIcon'>
