--- a/static-html/dev-html/partials-dev/footer.html
+++ b/static-html/dev-html/partials-dev/footer.html
@@ -1,16 +1,14 @@
 <footer class="siteFooter">
-    <div class="row">
-        <div class="large-3 column">
-            <div class="siteFooter-logo">
-                <a href="#" title="Creative Pinellas">
-                    <svg class='svgIcon svgIcon--logo'>
-                        <use xlink:href='#logoFull'/>
-                    </svg>
-                </a>
-            </div>
+    <div class="row small-collapse">
+        <div class="large-3 column siteFooter-logo">
+            <a href="#" title="Creative Pinellas">
+                <svg class='svgIcon svgIcon--logo'>
+                    <use xlink:href='#logoFull'/>
+                </svg>
+            </a>
         </div>
-        <div class="medium-10 large-7 column">
-            <nav class="">
+        <div class="medium-10 large-7 column siteFooter-nav">
+            <nav>
                 <ul class="siteNavigation siteNavigation--footer u-list--plain u-list--inline">
                     <li>
                         <a href="#">For the arts community</a>
@@ -33,7 +31,10 @@
                 </ul>
             </nav>
         </div>
-        <div class="medium-2 column">
+        <div class="medium-2 column siteFooter-social">
+            <div class="siteFooter-blockTitle">
+                Socialize
+            </div>
             <!-- build:section blocks.socialList --><!-- /build -->
         </div>
     </div>
