--- a/static-html/index.html
+++ b/static-html/index.html
@@ -89,7 +89,7 @@
                     </ul>
                 </nav>
                 <div class="offCanvas-social">
-                    <ul class="socialList u-list--plain u-list--inline test5">
+                    <ul class="socialList u-list--plain u-list--inline">
                         <li>
                             <a href="#" target="_blank" title="Follow us on Twitter">
                                 <svg class='svgIcon'>
@@ -112,6 +112,7 @@
                             </a>
                         </li>
                     </ul>
+
                 </div>
             </div>
             <div class="off-canvas-content" data-off-canvas-content>
@@ -128,7 +129,7 @@
                         </div>
                         <div class="small-3 medium-9 column u-text--right">
                             <div class="show-for-medium siteHeader-social">
-                                <ul class="socialList u-list--plain u-list--inline test5">
+                                <ul class="socialList u-list--plain u-list--inline">
                                     <li>
                                         <a href="#" target="_blank" title="Follow us on Twitter">
                                             <svg class='svgIcon'>
@@ -151,6 +152,7 @@
                                         </a>
                                     </li>
                                 </ul>
+
                             </div>
                             <nav class="show-for-medium siteHeader-topNav">
                                 <ul class="siteNavigation u-list--plain u-list--inline">
@@ -205,18 +207,16 @@
                     </section>
                 </header>
                 <footer class="siteFooter">
-                    <div class="row">
-                        <div class="large-3 column">
-                            <div class="siteFooter-logo">
-                                <a href="#" title="Creative Pinellas">
-                                    <svg class='svgIcon svgIcon--logo'>
-                        <use xlink:href='#logoFull'/>
-                    </svg>
-                                </a>
-                            </div>
+                    <div class="row small-collapse">
+                        <div class="large-3 column siteFooter-logo">
+                            <a href="#" title="Creative Pinellas">
+                                <svg class='svgIcon svgIcon--logo'>
+                    <use xlink:href='#logoFull'/>
+                </svg>
+                            </a>
                         </div>
-                        <div class="medium-10 large-7 column">
-                            <nav class="">
+                        <div class="medium-10 large-7 column siteFooter-nav">
+                            <nav>
                                 <ul class="siteNavigation siteNavigation--footer u-list--plain u-list--inline">
                                     <li>
                                         <a href="#">For the arts community</a>
@@ -239,8 +239,11 @@
                                 </ul>
                             </nav>
                         </div>
-                        <div class="medium-2 column">
-                            <ul class="socialList u-list--plain u-list--inline test5">
+                        <div class="medium-2 column siteFooter-social">
+                            <div class="siteFooter-blockTitle">
+                                Socialize
+                            </div>
+                            <ul class="socialList u-list--plain u-list--inline">
                                 <li>
                                     <a href="#" target="_blank" title="Follow us on Twitter">
                                         <svg class='svgIcon'>
@@ -263,6 +266,7 @@
                                     </a>
                                 </li>
                             </ul>
+
                         </div>
                     </div>
                 </footer>
