--- a/static-html/index.html
+++ b/static-html/index.html
@@ -207,7 +207,7 @@
                     </section>
                 </header>
                 <footer class="siteFooter">
-                    <div class="row small-collapse">
+                    <div class="row medium-collapse">
                         <div class="large-3 column siteFooter-logo">
                             <a href="#" title="Creative Pinellas">
                                 <svg class='svgIcon svgIcon--logo'>
@@ -267,6 +267,23 @@
                                 </li>
                             </ul>
 
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="column">
+                            <div class="siteFooter-partnerLogos">
+                                <a href="#"><img src="images/uploads/Pinellas_County_Government-white.png" alt="" width="150"></a>
+                                <a href="#"><img src="images/uploads/Vspc_reverse_logo.png" alt="" width="150"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="column">
+                            <div class="siteFooter-copyright">
+                                <p>
+                                    Copyright 2014 Creative Pinellas. All rights reserved. Creative Pinellas, Inc. 14025 58th Street N. Largo, FL 33760
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </footer>
