--- a/static-html/index.html
+++ b/static-html/index.html
@@ -209,13 +209,16 @@
                 <footer class="siteFooter">
                     <div class="row medium-collapse">
                         <div class="large-3 column siteFooter-logo">
+                            <!--    Footer Logo     -->
                             <a href="#" title="Creative Pinellas">
                                 <svg class='svgIcon svgIcon--logo'>
                     <use xlink:href='#logoFull'/>
                 </svg>
                             </a>
+                            <!--   / Footer Logo     -->
                         </div>
                         <div class="medium-10 large-7 column siteFooter-nav">
+                            <!--        Navigation      -->
                             <nav>
                                 <ul class="siteNavigation siteNavigation--footer u-list--plain u-list--inline">
                                     <li>
@@ -238,8 +241,10 @@
                                     <li><a href="#">New Releases</a></li>
                                 </ul>
                             </nav>
+                            <!--      / Navigation      -->
                         </div>
                         <div class="medium-2 column siteFooter-social">
+                            <!--    Social list, Same as in header  -->
                             <div class="siteFooter-blockTitle">
                                 Socialize
                             </div>
@@ -267,23 +272,28 @@
                                 </li>
                             </ul>
 
+                            <!--   / Social list, Same as in header  -->
                         </div>
                     </div>
                     <div class="row">
                         <div class="column">
+                            <!--    Footer logotypes    -->
                             <div class="siteFooter-partnerLogos">
                                 <a href="#"><img src="images/uploads/Pinellas_County_Government-white.png" alt="" width="150"></a>
                                 <a href="#"><img src="images/uploads/Vspc_reverse_logo.png" alt="" width="150"></a>
                             </div>
+                            <!--   / Footer logotypes    -->
                         </div>
                     </div>
                     <div class="row">
                         <div class="column">
+                            <!--    Copyright   -->
                             <div class="siteFooter-copyright">
                                 <p>
                                     Copyright 2014 Creative Pinellas. All rights reserved. Creative Pinellas, Inc. 14025 58th Street N. Largo, FL 33760
                                 </p>
                             </div>
+                            <!--   / Copyright      -->
                         </div>
                     </div>
                 </footer>
