28284 page template structure

--- a/static-html/dev-html/pages/index.html
+++ b/static-html/dev-html/pages/index.html
@@ -9,6 +9,13 @@
         </div>
         <div class="off-canvas-content" data-off-canvas-content>
             <!-- build:section partials.header --><!-- /build -->
+
+            <section class="siteBody">
+
+                <!-- Page Content goes here -->
+
+            </section>
+
             <!-- build:section partials.footer --><!-- /build -->
         </div>
     </div>
