--- a/static-html/sidebar-page.html
+++ b/static-html/sidebar-page.html
@@ -209,7 +209,35 @@
 
                 <section class="siteBody">
 
-                    <!-- Page Content goes here -->
+                    <div class="row">
+                        <section class="medium-8 large-9 column siteContent siteContent--hasSidebar">
+
+                            <h1>H1 Pragmatica Web Extra Light (200)&nbsp; 3em /1.15em&nbsp;<br></h1>
+
+                            <p class="intro">Intro p is 1.5em/1.25em and is colored using #04b4c3 to help it stand out.&nbsp;Intro p is 1.5em/1.25em and is colored using #04b4c3 to help it stand out.</p>
+
+                            <p>Body font is set to 16px pragmatica-web. <a href="#">This is a link in text</a> All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. Body font is set to 16px pragmatica-web.
+                                All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em,
+                                Pragmatica Light, 300 weight. Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. </p>
+
+                            <h2>H2 is Uppercase Bold (700) 1.5em/1.25em so it reads nicely even when it wraps<br></h2>
+
+                            <p>Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. <a href="#">This is a link in text</a> Body font is set to 16px pragmatica-web.
+                                All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. <br></p>
+
+                            <blockquote class="pullquote">This is the .blockquote style. The border to the left is 26px and the padding between the words and the quote is 20px. Font size/line-height is 1.5em/1.4em.</blockquote>
+
+                            <h2>H2 is Uppercase Bold (700) 1.5em/1.25em so it reads nicely even when it wraps<br></h2>
+
+                            <p>Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. &nbsp;Web sites are transforming from boring fields of Arial to embrace the
+                                gamut of typographical possibilities offered by web fonts. Web fonts, combined with the style and layout options presented by the creative use of CSS and JavaScript offer a new world of typographic opportunity on the web.
+                                </p>
+
+                        </section>
+                        <aside class="medium-4 large-3 column siteSidebar">
+                            aside
+                        </aside>
+                    </div>
 
                 </section>
 
