28284 style sidebar and page layout for sidebar

--- a/static-html/sidebar-page.html
+++ b/static-html/sidebar-page.html
@@ -235,7 +235,50 @@
 
                         </section>
                         <aside class="medium-4 large-3 column siteSidebar">
-                            aside
+                            <div class="siteSidebar-inner">
+                                <!--    Sidebar widget  -->
+                                <div class="siteSidebar-item siteSidebar-item--sky">
+                                    <h3>About Our Journal</h3>
+                                    <div class="siteSidebar-item-content">
+                                        <p>
+                                            Our journal highlights the best in Pinellas County's visual and performing arts. Our multimedia coverage of this dynamic cultural scene includes timely features, event previews, and perspectives from casual to critical, focused on the arts in all genres.
+                                        </p>
+                                    </div>
+                                </div>
+
+                                <!--    Sidebar widget  -->
+                                <div class="siteSidebar-item">
+                                    <h3>Explore Our Journal by Topic (used on posts)</h3>
+                                    <div class="siteSidebar-item-content">
+                                        <nav>
+                                            <ul class="u-list--plain">
+                                                <li><a href="#">Visual Arts</a></li>
+                                                <li><a href="#">Music </a></li>
+                                                <li><a href="#">Performing Arts </a></li>
+                                                <li><a href="#">Literature</a></li>
+                                                <li><a href="#">Learning Center</a></li>
+                                                <li><a href="#">News</a></li>
+                                                <li><a href="#">Uncategorized</a></li>
+                                            </ul>
+                                        </nav>
+                                    </div>
+                                </div>
+
+                                <!--    Sidebar widget  -->
+                                <div class="siteSidebar-item">
+                                    <h3>Also in this Section (used on pages)</h3>
+                                    <div class="siteSidebar-item-content">
+                                        <nav>
+                                            <ul class="u-list--plain">
+                                                <li><a href="#">Some pages 1</a></li>
+                                                <li><a href="#">Some pages 2</a></li>
+                                                <li><a href="#">Some pages 3</a></li>
+                                            </ul>
+                                        </nav>
+
+                                    </div>
+                                </div>
+                            </div>
                         </aside>
                     </div>
 
