--- a/static-html/dev-html/partials-dev/sidebar-template.html
+++ b/static-html/dev-html/partials-dev/sidebar-template.html
@@ -1,7 +1,7 @@
 <div class="row">
     <section class="medium-8 large-9 column siteContent siteContent--hasSidebar">
 
-        <h1>H1 Pragmatica Web Extra Light (200)&nbsp; 3em /1.15em&nbsp;<br></h1>
+        <h1>H1 Pragmatica Web Extra Light (200)&nbsp; 3em /1.15em&nbsp;</h1>
 
         <p class="intro">Intro p is 1.5em/1.25em and is colored using #04b4c3 to help it stand out.&nbsp;Intro p is
             1.5em/1.25em and is colored using #04b4c3 to help it stand out.</p>
