28332 add blog page content

--- a/static-html/dev-html/partials-dev/sidebar-template.html
+++ b/static-html/dev-html/partials-dev/sidebar-template.html
@@ -3,8 +3,10 @@
 
         <h1>H1 Pragmatica Web Extra Light (200)&nbsp; 3em /1.15em&nbsp;</h1>
 
-        <p class="intro">Intro p is 1.5em/1.25em and is colored using #04b4c3 to help it stand out.&nbsp;Intro p is
+        <div class="intro">
+            <p>Intro p is 1.5em/1.25em and is colored using #04b4c3 to help it stand out.&nbsp;Intro p is
             1.5em/1.25em and is colored using #04b4c3 to help it stand out.</p>
+        </div>
 
         <p>Body font is set to 16px pragmatica-web. <a href="#">This is a link in text</a> All other relationships cascade from the base body font. P size is
             1em/1.6em, Pragmatica Light, 300 weight. Body font is set to 16px pragmatica-web. All other relationships
@@ -19,7 +21,7 @@
             1em/1.6em, Pragmatica Light, 300 weight. <a href="#">This is a link in text</a> Body font is set to 16px pragmatica-web. All other relationships
             cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. <br></p>
 
-        <blockquote class="pullquote">This is the .blockquote style. The border to the left is 26px and the padding between the
+        <blockquote>This is the .blockquote style. The border to the left is 26px and the padding between the
             words and the quote is 20px. Font size/line-height is 1.5em/1.4em.</blockquote>
 
         <h2>H2 is Uppercase Bold (700) 1.5em/1.25em so it reads nicely even when it wraps<br></h2>
