--- a/static-html/blog-post.html
+++ b/static-html/blog-post.html
@@ -211,31 +211,60 @@
 
                     <div class="row">
                         <section class="medium-8 large-9 column siteContent siteContent--hasSidebar">
+                            <section class="row column">
 
-                            <h1>H1 Pragmatica Web Extra Light (200)&nbsp; 3em /1.15em&nbsp;</h1>
+                                <article class="postPage">
+                                    <!--    Post title  -->
+                                    <h1 class="postPage-title">H1 Pragmatica Web Extra Light (200)&nbsp; 3em /1.15em&nbsp;</h1>
 
-                            <div class="intro">
-                                <p>Intro p is 1.5em/1.25em and is colored using #04b4c3 to help it stand out.&nbsp;Intro p is 1.5em/1.25em and is colored using #04b4c3 to help it stand out.</p>
-                            </div>
+                                    <!--    Post Info   -->
+                                    <div class="postPage-info">Month 23, 2016 by AUTHOR NAME | <a href="#">CATEGORY</a></div>
 
-                            <p>Body font is set to 16px pragmatica-web. <a href="#">This is a link in text</a> All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. Body font is set to 16px pragmatica-web.
-                                All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em,
-                                Pragmatica Light, 300 weight. Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. </p>
+                                    <!--    Post Content    -->
+                                    <div class="postPage-content">
+                                        <figure class="wp-caption alignnone">
+                                            <img class="size-full wp-image-13" src="http://placehold.it/650x300" alt="" width="650" height="300">
+                                            <figcaption class="wp-caption-text">This is a caption. Caption color is Charcoal, #585858, 0.875em/ Pragmatica Web 300. This is a caption. Caption color is Charcoal, #585858, 0.875em/ Pragmatica Web 300. This is a caption. Caption color is Charcoal,
+                                                #585858, 0.875em/ Pragmatica Web 300.
+                                            </figcaption>
+                                        </figure>
 
-                            <h2>H2 is Uppercase Bold (700) 1.5em/1.25em so it reads nicely even when it wraps<br></h2>
+                                        <div class="intro">
+                                            <p>Intro p is 1.5em/1.25em and is colored using #04b4c3 to help it stand out.&nbsp;Intro p is 1.5em/1.25em and is colored using #04b4c3 to help it stand out.</p>
+                                        </div>
 
-                            <p>Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. <a href="#">This is a link in text</a> Body font is set to 16px pragmatica-web.
-                                All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. <br></p>
 
-                            <blockquote>This is the .blockquote style. The border to the left is 26px and the padding between the words and the quote is 20px. Font size/line-height is 1.5em/1.4em.</blockquote>
+                                        <p>Body font is set to 16px pragmatica-web. <a href="#">This is a link in text</a> All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. Body font is set to 16px
+                                            pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. Body font is set to 16px pragmatica-web. All other relationships cascade from the base
+                                            body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight.
+                                            </p>
 
-                            <h2>H2 is Uppercase Bold (700) 1.5em/1.25em so it reads nicely even when it wraps<br></h2>
+                                        <h2>H2 is Uppercase Bold (700) 1.5em/1.25em so it reads nicely even when it wraps<br></h2>
 
-                            <p>Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. &nbsp;Web sites are transforming from boring fields of Arial to embrace the
-                                gamut of typographical possibilities offered by web fonts. Web fonts, combined with the style and layout options presented by the creative use of CSS and JavaScript offer a new world of typographic opportunity on the web.
-                                </p>
+                                        <p>Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. <a href="#">This is a link in text</a> Body font is set to 16px
+                                            pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. <br></p>
+
+                                        <blockquote>This is the .blockquote style. The border to the left is 26px and the padding between the words and the quote is 20px. Font size/line-height is 1.5em/1.4em.</blockquote>
+
+                                        <h2>H2 is Uppercase Bold (700) 1.5em/1.25em so it reads nicely even when it wraps<br></h2>
+
+                                        <p>Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. &nbsp;Web sites are transforming from boring fields of Arial to
+                                            embrace the gamut of typographical possibilities offered by web fonts. Web fonts, combined with the style and layout options presented by the creative use of CSS and JavaScript offer a new world of typographic
+                                            opportunity on the web. </p>
+                                    </div>
+                                </article>
+
+                            </section>
+
+                            <section class="row column">
+                                <div class="postPageNavigation">
+                                    <a href="#" class="postNavigation-prev">&lt; Prev Post</a>
+                                    <a href="#" class="postNavigation-next">Next Post &gt;</a>
+                                </div>
+                            </section>
 
                         </section>
+
                         <aside class="medium-4 large-3 column siteSidebar">
                             <div class="siteSidebar-inner">
                                 <!--    Sidebar widget  -->
@@ -266,20 +295,6 @@
                                     </div>
                                 </div>
 
-                                <!--    Sidebar widget  -->
-                                <div class="siteSidebar-item">
-                                    <h3>Also in this Section (used on pages)</h3>
-                                    <div class="siteSidebar-item-content">
-                                        <nav>
-                                            <ul class="u-list--plain">
-                                                <li><a href="#">Some pages 1</a></li>
-                                                <li><a href="#">Some pages 2</a></li>
-                                                <li><a href="#">Some pages 3</a></li>
-                                            </ul>
-                                        </nav>
-
-                                    </div>
-                                </div>
                             </div>
                         </aside>
                     </div>
