28332 fix templates according to blog page

--- a/static-html/blog-post.html
+++ b/static-html/blog-post.html
@@ -252,6 +252,7 @@
                                             embrace the gamut of typographical possibilities offered by web fonts. Web fonts, combined with the style and layout options presented by the creative use of CSS and JavaScript offer a new world of typographic
                                             opportunity on the web. </p>
                                     </div>
+                                    <!--    Post Content    -->
                                 </article>
 
                             </section>
