--- a/static-html/dev-html/partials-dev/blog-post-template.html
+++ b/static-html/dev-html/partials-dev/blog-post-template.html
@@ -48,7 +48,7 @@
                         embrace the gamut of typographical possibilities offered by web fonts. Web fonts, combined with the style
                         and layout options presented by the creative use of CSS and JavaScript offer a new world of typographic
                         opportunity on the web. </p>
-                </div>
+                </div>  <!--    Post Content    -->
             </article>
 
         </section>
