--- a/static-html/dev-html/partials-dev/blog-post-template.html
+++ b/static-html/dev-html/partials-dev/blog-post-template.html
@@ -50,6 +50,45 @@
             </div>
         </section>
 
+        <!--    Related Posts   -->
+        <section class="row column">
+            <h2>RELATED POSTS</h2>
+
+            <div class="postsList">
+                <!--    postsList-item  -->
+                <div class="postsList-item">
+                    <div class="postsList-item-image">
+                        <img src="http://placehold.it/880x880" alt="" srcset="http://placehold.it/880x880 460w, http://placehold.it/280x280 768w">
+                        <span class="postsList-item-categoryDecor" style="background-color: #0177c1"></span>
+                    </div>
+                    <div class="postsList-item-body">
+                        <h3>Opera Made NEW</h3>
+                        <p>Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight...</p>
+                        <p><i>BY AUTHOR NAME</i></p>
+                    </div>
+                    <div>
+                        <a href="#" class="btn btn--fullWidth">Read More</a>
+                    </div>
+                </div>  <!--   / postsList-item  -->
+                
+                <!--    postsList-item  -->
+                <div class="postsList-item">
+                    <div class="postsList-item-image">
+                        <img src="http://placehold.it/880x880" alt="" srcset="http://placehold.it/880x880 460w, http://placehold.it/280x280 768w">
+                        <span class="postsList-item-categoryDecor" style="background-color: #f7941d"></span>
+                    </div>
+                    <div class="postsList-item-body">
+                        <h3>Opera Made NEW</h3>
+                        <p>Body font is set to 16px pragmatica-web. Body font is set to 16px pragmatica-web...</p>
+                        <p><i>BY AUTHOR NAME</i></p>
+                    </div>
+                    <div>
+                        <a href="#" class="btn btn--fullWidth">Read More</a>
+                    </div>
+                </div>  <!--   / postsList-item  -->
+            </div>
+        </section>
+
     </section>
 
     <aside class="medium-4 large-3 column siteSidebar">
