--- a/static-html/dev-html/partials-dev/header.html
+++ b/static-html/dev-html/partials-dev/header.html
@@ -21,15 +21,15 @@
                 </ul>
             </nav>
             <nav class="show-for-large">
-                <ul class="siteNavigation siteNavigation--header u-list--plain u-list--inline u-text--left">
-                    <li class="has-subNav">
+                <ul class="siteNavigation siteNavigation--header u-list--plain u-list--inline u-text--left js-touchNav">
+                    <li class="has-subNav js-hasSubNav">
                         <a href="#">About</a>
                         <ul class="u-list--plain">
                             <li><a href="#">Our Team</a></li>
                             <li><a href="#">Partnership</a></li>
                         </ul>
                     </li>
-                    <li class="has-subNav">
+                    <li class="has-subNav js-hasSubNav">
                         <a href="#">For the arts community</a>
                         <ul class="u-list--plain">
                             <li><a href="#">Oure Grants</a></li>
@@ -38,7 +38,7 @@
                             <li><a href="#">Events for Artists</a></li>
                         </ul>
                     </li>
-                    <li class="has-subNav">
+                    <li class="has-subNav js-hasSubNav">
                         <a href="#">Explore the arts</a>
                         <ul class="u-list--plain">
                             <li><a href="#">Events</a></li>
@@ -46,7 +46,7 @@
                             <li><a href="#">Local Artists Directory</a></li>
                         </ul>
                     </li>
-                    <li class="has-subNav">
+                    <li class="has-subNav js-hasSubNav">
                         <a href="#">Our journal</a>
                         <ul class="u-list--plain">
                             <li><a href="#">Learning Center</a></li>
