28332 add nowrap to post navigation

--- a/static-html/blog-post.html
+++ b/static-html/blog-post.html
@@ -162,15 +162,15 @@
                                 </ul>
                             </nav>
                             <nav class="show-for-large">
-                                <ul class="siteNavigation siteNavigation--header u-list--plain u-list--inline u-text--left">
-                                    <li class="has-subNav">
+                                <ul class="siteNavigation siteNavigation--header u-list--plain u-list--inline u-text--left js-touchNav">
+                                    <li class="has-subNav js-hasSubNav">
                                         <a href="#">About</a>
                                         <ul class="u-list--plain">
                                             <li><a href="#">Our Team</a></li>
                                             <li><a href="#">Partnership</a></li>
                                         </ul>
                                     </li>
-                                    <li class="has-subNav">
+                                    <li class="has-subNav js-hasSubNav">
                                         <a href="#">For the arts community</a>
                                         <ul class="u-list--plain">
                                             <li><a href="#">Oure Grants</a></li>
@@ -179,7 +179,7 @@
                                             <li><a href="#">Events for Artists</a></li>
                                         </ul>
                                     </li>
-                                    <li class="has-subNav">
+                                    <li class="has-subNav js-hasSubNav">
                                         <a href="#">Explore the arts</a>
                                         <ul class="u-list--plain">
                                             <li><a href="#">Events</a></li>
@@ -187,7 +187,7 @@
                                             <li><a href="#">Local Artists Directory</a></li>
                                         </ul>
                                     </li>
-                                    <li class="has-subNav">
+                                    <li class="has-subNav js-hasSubNav">
                                         <a href="#">Our journal</a>
                                         <ul class="u-list--plain">
                                             <li><a href="#">Learning Center</a></li>
@@ -260,8 +260,8 @@
                             </section>
 
                             <section class="row column">
-                                <div class="postPageNavigation">
-                                    <a href="#" class="postNavigation-prev">&lt; Prev Post</a>
+                                <div class="postPageNavigation u-clearfix">
+                                    <a href="#" class="postNavigation-prev">&lt; Prev Post Long Long Long Long Long Long name</a>
                                     <a href="#" class="postNavigation-next">Next Post &gt;</a>
                                 </div>
                             </section>
@@ -280,7 +280,7 @@
                                         <div class="postsList-item-body">
                                             <h3>Opera Made NEW</h3>
                                             <p>Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight...</p>
-                                            <p><i>BY AUTHOR NAME</i></p>
+                                            <p><i>BY AUTHOR NAME | <a href="#">CATEGORY</a></i></p>
                                         </div>
                                         <div>
                                             <a href="#" class="btn btn--fullWidth">Read More</a>
@@ -297,7 +297,7 @@
                                         <div class="postsList-item-body">
                                             <h3>Opera Made NEW</h3>
                                             <p>Body font is set to 16px pragmatica-web. Body font is set to 16px pragmatica-web...</p>
-                                            <p><i>BY AUTHOR NAME</i></p>
+                                            <div class="postsList-item-info">BY AUTHOR NAME | <a href="#">CATEGORY</a></div>
                                         </div>
                                         <div>
                                             <a href="#" class="btn btn--fullWidth">Read More</a>
