--- a/static-html/dev-html/partials-dev/blog-post-template.html
+++ b/static-html/dev-html/partials-dev/blog-post-template.html
@@ -44,8 +44,8 @@
         </section>
 
         <section class="row column">
-            <div class="postPageNavigation">
-                <a href="#" class="postNavigation-prev">&lt; Prev Post</a>
+            <div class="postPageNavigation u-clearfix">
+                <a href="#" class="postNavigation-prev">&lt; Prev Post Long Long Long Long Long Long name</a>
                 <a href="#" class="postNavigation-next">Next Post &gt;</a>
             </div>
         </section>
@@ -64,7 +64,7 @@
                     <div class="postsList-item-body">
                         <h3>Opera Made NEW</h3>
                         <p>Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight...</p>
-                        <p><i>BY AUTHOR NAME</i></p>
+                        <p><i>BY AUTHOR NAME | <a href="#">CATEGORY</a></i></p>
                     </div>
                     <div>
                         <a href="#" class="btn btn--fullWidth">Read More</a>
@@ -80,7 +80,7 @@
                     <div class="postsList-item-body">
                         <h3>Opera Made NEW</h3>
                         <p>Body font is set to 16px pragmatica-web. Body font is set to 16px pragmatica-web...</p>
-                        <p><i>BY AUTHOR NAME</i></p>
+                        <div class="postsList-item-info">BY AUTHOR NAME | <a href="#">CATEGORY</a></div>
                     </div>
                     <div>
                         <a href="#" class="btn btn--fullWidth">Read More</a>
