28333 add blog landing template

--- a/static-html/dev-html/partials-dev/blog-post-template.html
+++ b/static-html/dev-html/partials-dev/blog-post-template.html
@@ -54,39 +54,7 @@
         <section class="row column">
             <h2>RELATED POSTS</h2>
 
-            <div class="postsList">
-                <!--    postsList-item  -->
-                <div class="postsList-item">
-                    <div class="postsList-item-image">
-                        <img src="http://placehold.it/880x880" alt="" srcset="http://placehold.it/880x880 460w, http://placehold.it/280x280 768w">
-                        <span class="postsList-item-categoryDecor" style="background-color: #0177c1"></span>
-                    </div>
-                    <div class="postsList-item-body">
-                        <h3>Opera Made NEW</h3>
-                        <p>Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight...</p>
-                        <p><i>BY AUTHOR NAME | <a href="#">CATEGORY</a></i></p>
-                    </div>
-                    <div>
-                        <a href="#" class="btn btn--fullWidth">Read More</a>
-                    </div>
-                </div>  <!--   / postsList-item  -->
-                
-                <!--    postsList-item  -->
-                <div class="postsList-item">
-                    <div class="postsList-item-image">
-                        <img src="http://placehold.it/880x880" alt="" srcset="http://placehold.it/880x880 460w, http://placehold.it/280x280 768w">
-                        <span class="postsList-item-categoryDecor" style="background-color: #f7941d"></span>
-                    </div>
-                    <div class="postsList-item-body">
-                        <h3>Opera Made NEW</h3>
-                        <p>Body font is set to 16px pragmatica-web. Body font is set to 16px pragmatica-web...</p>
-                        <div class="postsList-item-info">BY AUTHOR NAME | <a href="#">CATEGORY</a></div>
-                    </div>
-                    <div>
-                        <a href="#" class="btn btn--fullWidth">Read More</a>
-                    </div>
-                </div>  <!--   / postsList-item  -->
-            </div>
+            <!-- build:section blocks.postsList --><!-- /build -->
         </section>
 
     </section>
@@ -98,9 +66,7 @@
                 <h3>About Our Journal</h3>
                 <div class="siteSidebar-item-content">
                     <p>
-                        Our journal highlights the best in Pinellas County's visual and performing arts. Our multimedia coverage
-                        of this dynamic cultural scene includes timely features, event previews, and perspectives from casual to
-                        critical, focused on the arts in all genres.
+                        Our journal highlights the best in Pinellas County's visual and performing arts. Our multimedia coverage of this dynamic cultural scene includes timely features, event previews, and perspectives from casual to critical, focused on the arts in all genres.
                     </p>
                 </div>
             </div>
