--- a/static-html/index.html
+++ b/static-html/index.html
@@ -157,7 +157,7 @@
                             <nav class="show-for-medium siteHeader-topNav">
                                 <ul class="siteNavigation u-list--plain u-list--inline">
                                     <li>
-                                        <a href="#">Contacts</a>
+                                        <a href="#">Contact Us</a>
                                     </li>
                                 </ul>
                             </nav>
