28369 fix hover state on mobile nav trigger when nav is open

--- a/static-html/blog-post.html
+++ b/static-html/blog-post.html
@@ -200,9 +200,9 @@
                                     </li>
                                 </ul>
                             </nav>
-                            <button type="button" class="hide-for-large mobileNavToggle js-mobileNavToggle" data-toggle="offCanvas" data-open="CLOSE" data-close="MENU">
-                <span class="mobileNavToggle-hamburger"><span></span></span>
-            </button>
+                            <a href="#" class="hide-for-large mobileNavToggle js-mobileNavToggle" data-toggle="offCanvas" data-open="CLOSE" data-close="MENU">
+                                <span class="mobileNavToggle-hamburger"><span></span></span>
+                            </a>
                         </div>
                     </section>
                 </header>
