28377 landing work with scrset and feedback

--- a/static-html/dev-html/partials-dev/section-landing.html
+++ b/static-html/dev-html/partials-dev/section-landing.html
@@ -36,7 +36,7 @@
             </div><!--   promoList-item  -->
         </section>
 
-        <section class="u-fullSection u-aquaGradient promoSpace">
+        <section class="promoSpace u-fullSection u-aquaGradient">
 
             <div class="promoSpace-inner">
                 <h1>Are You An Artist?</h1>
