--- a/static-html/dev-html/blocks/promo-box.html
+++ b/static-html/dev-html/blocks/promo-box.html
@@ -1,6 +1,8 @@
 <div class="promoList-item">
     <div class="promoList-item-image">
-        <img src="http://placehold.it/880x880" alt="" srcset="http://placehold.it/880x880 460w, http://placehold.it/400x400 768w">
+        <img src="http://placehold.it/480x480"
+             alt=""
+             srcset="http://placehold.it/480x480 480w, http://placehold.it/300x300 480w">
     </div>
     <div class="promoList-item-body">
         <h3>EXPLORE ART VENUES</h3>
