28377 promolist layout refactor

--- a/static-html/dev-html/partials-dev/section-landing.html
+++ b/static-html/dev-html/partials-dev/section-landing.html
@@ -21,17 +21,17 @@
         </section>
 
         <!--    Sub page Promo  -->
-        <section class="row promoList">
-            <div class="medium-6 column">
+        <section class="row halfMedium-collapse medium-uncollapse promoList">
+            <div class="halfMedium-6 column">
                 <!-- build:section blocks.promoBox --><!-- /build -->
             </div><!--   promoList-item  -->
-            <div class="medium-6 column">
+            <div class="halfMedium-6 column">
                 <!-- build:section blocks.promoBox --><!-- /build -->
             </div><!--   promoList-item  -->
-            <div class="medium-6 column">
+            <div class="halfMedium-6 column">
                 <!-- build:section blocks.promoBox --><!-- /build -->
             </div><!--   promoList-item  -->
-            <div class="medium-6 column">
+            <div class="halfMedium-6 column">
                 <!-- build:section blocks.promoBox --><!-- /build -->
             </div><!--   promoList-item  -->
         </section>
