--- a/static-html/section-page.html
+++ b/static-html/section-page.html
@@ -232,8 +232,8 @@
                             </section>
 
                             <!--    Sub page Promo  -->
-                            <section class="row promoList">
-                                <div class="medium-6 column">
+                            <section class="row halfMedium-collapse medium-uncollapse promoList">
+                                <div class="halfMedium-6 column">
                                     <div class="promoList-item">
                                         <div class="promoList-item-image">
                                             <img src="http://placehold.it/960x960" alt="" srcset="http://placehold.it/960x960 480w, http://placehold.it/800x800 768w">
@@ -250,7 +250,7 @@
                                     <!--   / promoList-item  -->
                                 </div>
                                 <!--   promoList-item  -->
-                                <div class="medium-6 column">
+                                <div class="halfMedium-6 column">
                                     <div class="promoList-item">
                                         <div class="promoList-item-image">
                                             <img src="http://placehold.it/960x960" alt="" srcset="http://placehold.it/960x960 480w, http://placehold.it/800x800 768w">
@@ -267,7 +267,7 @@
                                     <!--   / promoList-item  -->
                                 </div>
                                 <!--   promoList-item  -->
-                                <div class="medium-6 column">
+                                <div class="halfMedium-6 column">
                                     <div class="promoList-item">
                                         <div class="promoList-item-image">
                                             <img src="http://placehold.it/960x960" alt="" srcset="http://placehold.it/960x960 480w, http://placehold.it/800x800 768w">
@@ -284,7 +284,7 @@
                                     <!--   / promoList-item  -->
                                 </div>
                                 <!--   promoList-item  -->
-                                <div class="medium-6 column">
+                                <div class="halfMedium-6 column">
                                     <div class="promoList-item">
                                         <div class="promoList-item-image">
                                             <img src="http://placehold.it/960x960" alt="" srcset="http://placehold.it/960x960 480w, http://placehold.it/800x800 768w">
